--- a/temp-site/assets/css/main.css
+++ b/temp-site/assets/css/main.css
@@ -201,6 +201,7 @@ input, select, textarea {
 		font-size: 2.25rem;
 		line-height: 1.3;
 		letter-spacing: 0.5rem;
+		display: inline;
 	}
 
 	h2 {
@@ -1199,9 +1200,9 @@ input, select, textarea {
 		-ms-justify-content: space-between;
 		justify-content: space-between;
 		position: relative;
-		min-height: 100vh;
+		max-height: 100vh;
 		width: 100%;
-		padding: 4rem 2rem;
+		padding: 2rem 2rem;
 		z-index: 3;
 	}
 
