Tidy up placeholder animations using animate.css

--- a/temp-site/assets/css/main.css
+++ b/temp-site/assets/css/main.css
@@ -71,6 +71,11 @@ input, select, textarea {
 	appearance: none;
 }
 
+/* Lastbid Custom */
+.hidden {
+	visibility: hidden;
+}
+
 /* Basic */
 
 	@-ms-viewport {
